--- a/HTML/index.html
+++ b/HTML/index.html
@@ -64,7 +64,7 @@
             <h3>Sorting by Priority <i class="fa-solid fa-arrow-up-short-wide"></i> </h3>
         </div>
 
-        <div class="row row-cols-1 row-cols-md-3 g-4">
+        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-4">
             <div class="col">
                 <div class="card h-100">
                     <div class="card-header">
