--- a/HTML/index.html
+++ b/HTML/index.html
@@ -13,7 +13,6 @@
 
 <body>
     <header>
-
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#"><i class="fa-solid fa-calendar-days"></i> My weekly plan</a>
@@ -31,7 +30,6 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Settings</a>
                         </li>
-
                         <li class="nav-item">
                             <button type="button" class="btn btn-dark bell"><i class="fa-solid fa-bell"></i></button>
                         </li>
@@ -40,260 +38,23 @@
             </div>
         </nav>
     </header>
-
     <div class="hero_top ">
         <div class="card bg-dark text-white">
             <img src="https://cdn.pixabay.com/photo/2020/02/27/14/05/planner-4884740_960_720.jpg" class="img-fluid" alt="...">
             <div class="card-img-overlay text-center row align-items-center justify-content-between">
                 <div class="col-12">
-
                     <h3 id="headingtitle">Weekly plan</h3>
-
-
-
                 </div>
             </div>
         </div>
     </div>
-
-
-
     <div class="container">
         <div class="starter-text">
             <h3>Weekly Tasks</h3>
             <h3>Sorting by Priority <i class="fa-solid fa-arrow-up-short-wide"></i> </h3>
         </div>
-
-        <div class="row row-cols-lg-3 row-cols-md-2 row-cols-sm-1 g-4">
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end"> <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i>
-                        </div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/11/19/15/20/dog-1839808_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Take the dog for a walk</h5>
-                        <p class="card-text">He needs it! And you too :)</p>
-                    </div>
-                    <hr>
-
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn  delete-done btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn  delete-done btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2015/01/09/11/22/fitness-594143_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Training</h5>
-                        <p class="card-text">Go for a training</p>
-                    </div>
-                    <hr>
-
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cook some delicious food</h5>
-                        <p class="card-text">No junkfood this week!</p>
-                    </div>
-                    <hr>
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cook some delicious food</h5>
-                        <p class="card-text">No junkfood this week!</p>
-                    </div>
-                    <hr>
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cook some delicious food</h5>
-                        <p class="card-text">No junkfood this week!</p>
-                    </div>
-                    <hr>
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cook some delicious food</h5>
-                        <p class="card-text">No junkfood this week!</p>
-                    </div>
-                    <hr>
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cook some delicious food</h5>
-                        <p class="card-text">No junkfood this week!</p>
-                    </div>
-                    <hr>
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cook some delicious food</h5>
-                        <p class="card-text">No junkfood this week!</p>
-                    </div>
-                    <hr>
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card h-100">
-                    <div class="card-header">
-                        <button type="button" class="btn btn-info">Task</button>
-                        <div class="icons justify-content-end">
-                            <i class="fa-solid fa-bookmark"></i>
-                            <i class="fa-solid fa-ellipsis-vertical"></i></div>
-
-                    </div>
-                    <img src="https://cdn.pixabay.com/photo/2016/02/05/15/34/pasta-1181189_960_720.jpg" class="card-img-top" alt="...">
-                    <div class="card-body">
-                        <h5 class="card-title">Cook some delicious food</h5>
-                        <p class="card-text">No junkfood this week!</p>
-                    </div>
-                    <hr>
-                    <div class="card-footer">
-                        <p><i class="fa-solid fa-triangle-exclamation"></i> Priority Level: <button type="button" class="btn btn-success">0</button></p>
-                        <p><i class="fa-solid fa-calendar-days"></i> Deadline: 15.06.2022</p>
-                        <hr>
-                        <button type="button" class="btn btn-danger"><i class="fa-solid fa-trash-can justify-content-end"></i> Delete</button>
-                        <button type="button" class="btn btn-success"><i class="fa-solid fa-circle-check justify-content-end"></i> Done</button>
-
-                    </div>
-                </div>
-            </div>
+        <div class="row justify-content-center content">
         </div>
-
     </div>
     <footer class=" bg-dark">
         <div class="footer">
@@ -313,9 +74,8 @@
             <p class="copyright text-white text-center p-4 mb-0">&copy; 2022 Copyright Andrea Bicskei</p>
         </div>
     </footer>
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="../JS/jason.json"></script>
     <script src="../JS/script.js"></script>
 </body>
 
