--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,9 +51,10 @@
     <div class="container">
         <div class="starter-text">
             <h3>Weekly Tasks</h3>
-            <h3>Sorting by Priority <i class="fa-solid fa-arrow-up-short-wide"></i> </h3>
+            <h3>Sorting by Priority <i class="btn fa-solid fa-arrow-up-short-wide sortingList"></i> </h3>
         </div>
-        <div class="row justify-content-center content">
+        <div class="row justify-content-center content " id="result">
+
         </div>
     </div>
     <footer class=" bg-dark">
@@ -74,8 +75,9 @@
             <p class="copyright text-white text-center p-4 mb-0">&copy; 2022 Copyright Andrea Bicskei</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="../JS/jason.json"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
     <script src="../JS/script.js"></script>
 </body>
 
